Update title for speech therapy waiting list page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech Therapy Waiting List | רשימת המתנה לקלינאות תקשורת</title>
+    <title>Ortal Korecky Speech Therapy Waiting List | רשימת המתנה לאורטל קורצקי קלינאית תקשורת</title>
     <meta name="description" content="Join the waiting list for professional speech therapy services. Bilingual support for Hebrew and English speakers.">
 
     <!-- Preconnect for performance -->
