Update Hebrew localization for form steps

--- a/index.html
+++ b/index.html
@@ -1802,8 +1802,8 @@
                 'accessibility.skipLink': 'דלג לתוכן הראשי',
 
                 // Step 1
-                'step1.title': 'למי זה מיועד?',
-                'step1.description': 'ספרו לנו על מי שזקוק לשירותי קלינאות תקשורת.',
+                'step1.title': 'למי הטיפול מיועד?',
+                'step1.description': 'בואו נתחיל',
                 'step1.nameLabel': 'שם מלא של המטופל/ת',
                 'step1.namePlaceholder': 'הזינו שם מלא',
                 'step1.nameError': 'אנא הזינו שם (לפחות 2 תווים)',
@@ -1817,7 +1817,7 @@
 
                 // Step 2
                 'step2.title': 'איך ניתן ליצור איתכם קשר?',
-                'step2.description': 'נשתמש בפרטים אלה כדי ליצור איתכם קשר לגבי תורים.',
+                'step2.description': 'אשתמש בפרטים אלה כדי ליצור איתכם קשר לגבי תורים.',
                 'step2.phoneLabel': 'מספר טלפון',
                 'step2.phoneHint': 'פורמט נייד ישראלי (05X-XXX-XXXX)',
                 'step2.phoneError': 'אנא הזינו מספר נייד ישראלי תקין',
@@ -1825,8 +1825,8 @@
                 'step2.emailError': 'אנא הזינו כתובת אימייל תקינה',
 
                 // Step 3
-                'step3.title': 'ספרו לנו על הקושי',
-                'step3.description': 'זה עוזר לנו להבין איך נוכל לעזור בצורה הטובה ביותר.',
+                'step3.title': 'ספרו לי על הקושי/האתגר',
+                'step3.description': 'זה יעזור להבין איך אוכל לעזור בצורה הטובה ביותר.',
                 'step3.ageLabel': 'קבוצת הגיל של המטופל/ת',
                 'step3.ageError': 'אנא בחרו קבוצת גיל',
                 'step3.infant': 'תינוק (0-2)',
@@ -1835,8 +1835,8 @@
                 'step3.teen': 'נוער (13-17)',
                 'step3.adult': 'מבוגר (18+)',
                 'step3.concernsLabel': 'תארו את קשיי הדיבור או התקשורת',
-                'step3.concernsHint': 'לדוגמה: קושי בהגיית צלילים, גמגום, דיבור מאוחר, בעיות קול (אופציונלי)',
-                'step3.concernsPlaceholder': 'ספרו לנו עוד על האתגרים...',
+                'step3.concernsHint': 'לדוגמה: קושי בהגיית צלילים, ריור, דיבור מאוחר, טיפול בתפקודי פה (אופציונלי)',
+                'step3.concernsPlaceholder': 'ספרו לי עוד על האתגרים...',
                 'step3.charsRemaining': 'תווים נותרו',
 
                 // Step 4
